# meshcreate

./: Readme.md  a1quad2.cc  a1quad3.cc  a1tet.cc  a1tet2.cc  a1tri2.cc  a1tri2_polar.cc  a1tri3.cc  apfSBPShape.cc  build.scorec.sh2  cleanup.sh  config.sh  contributors.txt  convert_su2.sh  extract_su2.jl  make_big_mesh3.sh  make_dmg.sh  make_meshes.sh  make_meshset.sh  make_meshset_convergence.sh  make_meshset_convergence_2p.sh  make_meshset_convergence_2s.sh  make_meshset_convergence_3p.sh  make_meshset_convergence_3s.sh  make_meshset_strong_2.sh  make_meshset_strong_3.sh  make_parallel_mesh.sh  make_parallel_mesh2.sh  make_parallel_mesh2_polar.sh  make_parallel_mesh3.sh  makeinstall.sh  refine_and_split.sh  renderit.cc  split.sh  use_meshcreate.sh
src/: CMakeLists.txt  a1quad2.cc  a1tet.cc  a1tet3.cc  a1tri2.cc  a1tri2_polar.cc  a1tri2_su2.cc  a1tri2_su2tri.cc  a1tri3.cc  apfSBPShape3.cc  apfSBPShape3.h  print_geo_coords.cc  renderit.cc  verify.cc  zsplit.cc
